[package]
name = "gl-client-tryout"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "peerswap"
path = "src/bin/peerswap.rs"

[dependencies]
gl-client = "0.3.2"
rand = "*"
bip39 = { version = "*", features=["rand_core"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
bitcoincore-rpc = "0.19"
serde = "1.0.228"
serde_json = "1.0.145"
url = "2.5.7"
hex = "0.4"
cln-rpc = "0.5.0"
cln-grpc = "0.2"
tonic = { version = "0.8", features = ["tls"] }
